load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: examples-service
spec:
  selector:
    app: has
  ports: 
    - port: 80
      targetPort: 80
  externalTrafficPolicy: Local
  type: LoadBalancer
