ingress-routing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-routing
spec:
  rules:
    - host: highwayanalytics.us
      http:
        paths:
          - path: / 
            frontend:
              serviceName: frontend-service
              servicePort: 4000
          - path: /api 
            backend:
              serviceName: backend-service
              servicePort: 8000
          - path: /admin 
            backend:
              serviceName: backend-service
              servicePort: 8000
